--- a/ConsultorioOdontologicoEE-war/nbproject/project.properties
+++ b/ConsultorioOdontologicoEE-war/nbproject/project.properties
@@ -152,6 +152,7 @@ platform.active=JDK_1.7
 project.ConsultorioOdontologicoEE-ejb=../ConsultorioOdontologicoEE-ejb
 reference.ConsultorioOdontologicoEE-ejb.dist=${project.ConsultorioOdontologicoEE-ejb}/dist/ConsultorioOdontologicoEE-ejb.jar
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
